# niffler-py-st3

./: docker-compose.yml  run_tests.sh
niffler_tests_python/: .env_sample  .gitignore  README.md  config.ini  config.py  pyproject.toml  requirements.txt  spend_data.json
niffler_tests_python/.hypothesis/constants/: 01262d1936f7209d  063f3e79f7b94bf5  0bc3d4b359fdb828  10b44ead28b9dab9  1825bc24e376c7c2  2475e06bca136dda  2ef3dbbd0ebecdc3  30645c81df55437c  3139a93949622851  330c45f942b0ee5b  35cfbc7e0e138bbe  37d709776f8d37cc  384a20dc5c44ab10  3b743989e0812c99  482b0af0163f2690  54bee8f6c7eaa49e  54eef7a39505340b  5c3edd52f185c6d8  60b44feeea4752d3  6beed06dc2f53840  7c300a13527fe10a  8814c5052887af5d  8ba20f92f1fa01ce  921798b655415f9e  93c98d16b6ba597e  9426b9c789a56715  9462f0caaec3ea57  95534e7b27d41674  9b002ef836d8dac2  9bef4bfbc1c73b72  a52d215e2ce5d018  b6c38a68cd47fe51  cd86678725086791  d572a08c7a9f29e2  d955374277498fcf  da39a3ee5e6b4b0d  e45c7a2ed685ca95  f395c3ce4971c24e  fa9c69d80ba636a9
niffler_tests_python/allure-report/: index.html
niffler_tests_python/allure-report/data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
niffler_tests_python/clients/: auth_client.py  category_client.py  kafka_client.py  oauth_client.py  spend_client.py  user_client.py
niffler_tests_python/configuration/: ConfigProvider.py
niffler_tests_python/databases/: auth_db.py  spend_db.py  userdata_db.py
niffler_tests_python/fixtures/: auth_fixtures.py  category_fixtures.py  client_fixtures.py  pages_fixtures.py  spend_fixtures.py
niffler_tests_python/model/: _bases.py  auth_user_db.py  authority_db.py  category.py  config.py  error_response.py  oauth.py  spend.py  userdata.py  userdata_db.py
niffler_tests_python/settings/: client_config.py  server_config.py
niffler_tests_python/templates/: http-request.ftl  http-response.ftl
niffler_tests_python/test_data/: category_data.json
niffler_tests_python/tests/: conftest.py
niffler_tests_python/utils/: allure_helpers.py  api_checkers.py  base_session.py  helpers.py  marks.py  sessions.py
niffler_tests_python/web_pages/: BasePage.py  HeaderPage.py  LoginPage.py  MainPage.py  ProfilePage.py  RegisterPage.py  SpendingPage.py
(+527 files in other folders)
